ctf: fix deduplication of pointer types
This commit fixes a problem with the deduplication of pointer types.
When an incomplete (forward) type is referred by a pointer type, and
then the type is completed with a struct-or-union type, the
corresponding CTF type wasn't being emitted.

[gcc]

	* ctfout.c (gen_ctf_type): Fix deduplication of pointer types.

[gcc/testsuite]

	* gcc.dg/debug/ctf/ctf-struct-pointer-1.c: New test.
	* gcc.dg/debug/ctf/ctf-struct-pointer-2.c: Likewise.

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -657,6 +657,10 @@
 	PR target/97327
 	* config/arm/arm.c (fp_bitlist): Add isa_bit_mve_float to FP bits array.
 
+2020-06-19  Jose E. Marchesi  <jose.marchesi@oracle.com>
+
+	* ctfout.c (gen_ctf_type): Fix deduplication of pointer types.
+
 2020-10-16  Christophe Lyon  <christophe.lyon@linaro.org>
 
 	Backported from master:
